WIP: switch to Java APIs
Change-Id: I0c6773446140d895736ae138511586f7c56e3ee0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>